--- a/src/App.css
+++ b/src/App.css
@@ -5,11 +5,19 @@
   text-align: center;
   display: flex;
   justify-content: center;
+  background-color: black;
+  flex-direction: column;
 }
 
 .header {
-  background-color: blue;
+  /* background-color: rgb(12, 94, 49); */
+  justify-content: center;
+  display: flex;
   width: 100vw;
+  max-width: 960PX;
+  margin: 0 auto;
+  /* text-align: center; */
+  /* justify-content: center; */
   margin: 5px;
 }
 
@@ -20,8 +28,9 @@
 .Main {
   height: 100vh;
   width: 100vw;
+  max-width: 960px;
   display: flex;
-  background-color: brown;
+  /* background-color: rgb(5, 28, 129); */
   flex-direction: column;
 }
 
